<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_title"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/duration_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:importantForAutofill="no"
        android:labelFor="@+id/duration_input"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <Button
        android:id="@+id/in_proc_worker_demo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/in_proc_worker_demo"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/in_proc_fg_worker_demo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/in_proc_fg_worker_demo"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/ut_task_worker_demo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ut_task_worker_demo"
        android:layout_gravity="center_horizontal"
        />
    <Button
        android:id="@+id/ut_task_worker_fg_demo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/ut_task_worker_fg_demo"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>